# swe

./: README.md  _swe  pyproject.toml  swe.py
src/swe/: __init__.py  __main__.py  _autocomplete.py  cli.py  common.py  interactive.py  sounds.py  style.tcss
src/swe/textual_autocomplete/: __init__.py  _autocomplete.py  _path_autocomplete.py
src/textual_autocomplete/: _autocomplete.py
