[project]
name = "swe"
version = "0.2.0"
description = "Command line interface for Folkets lexikon, the Swedish-English dictionary"
authors = [
    { name = "Yo'av Moshe", email = "swe@yoavmoshe.com" }
]
dependencies = [
    "textual>=0.72.0",
    "requests>=2.32.3",
    "mwclient>=0.10.1",
    "lxml>=5.2.2",
    "markdownify>=0.12.1",
    "editdistance>=0.8.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"swe" = "swe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/swe"]
