[project]
name = "swe"
version = "0.4.0"
description = "Command line interface for Folkets lexikon, the Swedish-English dictionary"
authors = [{ name = "Yo'av Moshe", email = "swe@yoavmoshe.com" }]
dependencies = [
  "textual==0.72.0",
  "mwclient>=0.10.1",
  "lxml==5.2.2",
  "markdownify>=0.12.1",
  "editdistance>=0.8.1",
  "requests>=2.32.3",
]
readme = "README.md"
license = "MIT"
requires-python = ">= 3.9"

[project.scripts]
"swe" = "swe:main"

[project.urls]
Homepage = "https://github.com/bjesus/swe"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/swe"]
