[project]
name = "swe"
version = "0.5.1"
description = "Command line interface for Folkets lexikon, the Swedish-English dictionary"
authors = [{ name = "Yo'av Moshe", email = "swe@yoavmoshe.com" }]
dependencies = [
  "textual==3.6.0",
  "mwclient>=0.10.1",
  "lxml==5.2.2",
  "markdownify>=0.12.1",
  "editdistance>=0.8.1",
  "requests>=2.32.3",
  "xdg-base-dirs>=6.0.2",
  "toml>=0.10.2",
]
readme = "README.md"
license = "MIT"
requires-python = ">= 3.10"

[project.scripts]
"swe" = "swe:main"

[project.urls]
Homepage = "https://github.com/bjesus/swe"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = ["textual-dev>=1.7.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/swe"]
